--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -15,6 +15,6 @@
 
 	<servlet-mapping>
 		<servlet-name>HelloWorldServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern></url-pattern>
 	</servlet-mapping>
 </web-app>
