Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,12 +11,12 @@ pool:
 
 steps:
 - script: |
-    echo $(rhv_vm_name)
+    echo rhv_vm_name: $(rhv_vm_name)
     echo $(tower_group)
     echo $(tower_inventory)
     echo $(vm_fq_hostname)
   displayName: 'Display Ansible Tower job parameters'
 
 - script: |
-    curl http://google.com
+    curl -s -k --user '$(tower_uname):$(tower_pword)' -H 'Content-Type: application/json' -X POST https://tower-fedsledsatprinz-7wh0iheq.srv.ravcloud.com/api/v2/workflow_job_templates/12/launch/ --data '{ "extra_vars": { "rhv_vm_name": "$(rhv_vm_name)", "tower_group": "$(tower_group)", "tower_inventory": "$(tower_inventory)", "vm_fq_hostname": "$(vm_fq_hostname)" }}'
   displayName: 'Execute Ansible Tower template'
