--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,4 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# Pipeline to deploy application to a new server
 
 trigger:
 - master
@@ -12,11 +9,11 @@ pool:
 steps:
 - script: |
     echo rhv_vm_name: $(rhv_vm_name)
-    echo $(tower_group)
-    echo $(tower_inventory)
-    echo $(vm_fq_hostname)
+    echo tower_group: $(tower_group)
+    echo tower_inventory: $(tower_inventory)
+    echo vm_fq_hostname: $(vm_fq_hostname)
   displayName: 'Display Ansible Tower job parameters'
 
-- script: |
-    curl -s -k --user '$(tower_uname):$(tower_pword)' -H 'Content-Type: application/json' -X POST https://tower-fedsledsatprinz-7wh0iheq.srv.ravcloud.com/api/v2/workflow_job_templates/12/launch/ --data '{ "extra_vars": { "rhv_vm_name": "$(rhv_vm_name)", "tower_group": "$(tower_group)", "tower_inventory": "$(tower_inventory)", "vm_fq_hostname": "$(vm_fq_hostname)" }}'
-  displayName: 'Execute Ansible Tower template'
+#- script: |
+#    curl -s -k --user '$(tower_uname):$(tower_pword)' -H 'Content-Type: application/json' -X POST https://tower-fedsledsatprinz-7wh0iheq.srv.ravcloud.com/api/v2/workflow_job_templates/12/launch/ --data '{ "extra_vars": { "rhv_vm_name": "$(rhv_vm_name)", "tower_group": "$(tower_group)", "tower_inventory": "$(tower_inventory)", "vm_fq_hostname": "$(vm_fq_hostname)" }}'
+#  displayName: 'Execute Ansible Tower template'
