--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Standard Maven .gitignore
 #
 !target/HelloServlet-1.0.0.war
-target/
+target/*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
