Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ steps:
     echo tower_group: $(tower_group)
     echo tower_inventory: $(tower_inventory)
     echo vm_fq_hostname: $(vm_fq_hostname)
+    echo tower_uname: $(tower_uname)
   displayName: 'Display Ansible Tower job parameters'
 
 - script: |
