Update azure-pipelines-1.yml for Azure Pipelines
added openshift components to pipeline

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,10 +10,17 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: oc-setup@2
+  inputs:
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'OpenShift Demo Cluster'
+
+- task: oc-cmd@2
+  inputs:
+    connectionType: 'OpenShift Connection Service'
+    openshiftService: 'OpenShift Demo Cluster'
+    cmd: 'oc status'
+    uselocalOc: true
+
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
