--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,12 +28,12 @@ steps:
     cmd: 'oc status'
     uselocalOc: true
 
-- task: oc-cmd@2
-  inputs:
-    connectionType: 'OpenShift Connection Service'
-    openshiftService: 'OpenShift Demo Cluster'
-    cmd: 'oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest'
-    uselocalOc: true
+#- task: oc-cmd@2
+#  inputs:
+#    connectionType: 'OpenShift Connection Service'
+#    openshiftService: 'OpenShift Demo Cluster'
+#    cmd: 'oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest'
+#    uselocalOc: true
 
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- script: oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest
+  displayName: 'Tag the new container image'
