--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,34 +6,31 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'ubuntu-latest'
+stages:
+- stage: build_stage
+  jobs:
+  - job: build_job
+    pool:
+      vmImage: 'ubuntu-latest'
 
-steps:
-- task: oc-setup@2
-  inputs:
-    connectionType: 'OpenShift Connection Service'
-    openshiftService: 'OpenShift Demo Cluster'
+    steps:
+    - task: oc-setup@2
+      inputs:
+        connectionType: 'OpenShift Connection Service'
+        openshiftService: 'OpenShift Demo Cluster'
 
-- task: oc-cmd@2
-  inputs:
-    connectionType: 'OpenShift Connection Service'
-    openshiftService: 'OpenShift Demo Cluster'
-    cmd: 'oc start-build hello -n development --follow'
-    uselocalOc: true
-- task: oc-cmd@2
-  inputs:
-    connectionType: 'OpenShift Connection Service'
-    openshiftService: 'OpenShift Demo Cluster'
-    cmd: 'oc status'
-    uselocalOc: true
+    - task: oc-cmd@2
+      inputs:
+        connectionType: 'OpenShift Connection Service'
+        openshiftService: 'OpenShift Demo Cluster'
+        cmd: 'oc start-build hello -n development --follow'
+        uselocalOc: true
+    - task: oc-cmd@2
+      inputs:
+        connectionType: 'OpenShift Connection Service'
+        openshiftService: 'OpenShift Demo Cluster'
+        cmd: 'oc status'
+        uselocalOc: true
 
-#- task: oc-cmd@2
-#  inputs:
-#    connectionType: 'OpenShift Connection Service'
-#    openshiftService: 'OpenShift Demo Cluster'
-#    cmd: 'oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest'
-#    uselocalOc: true
-
-- script: oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest
-  displayName: 'Tag the new container image'
+    - script: oc tag `oc describe imagestream hello -n development |grep sha256|grep -m 1 "\*"|cut -d / -f 2,3` development/hello:promoteToTest
+      displayName: 'Tag the new container image'
