--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 # Standard Maven .gitignore
 #
 #target/*
-target/HelloServlet-1.0.0/*
-target/classes/*
-target/generated-sources/*
-target/maven-archiver/*
-target/maven-status/*
+#target/HelloServlet-1.0.0/*
+#target/classes/*
+#target/generated-sources/*
+#target/maven-archiver/*
+#target/maven-status/*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
