Update pom.xml to build ROOT.war and take out default specification
Added the following so the war file produced is called ROOT.war

<project>
  <build>
    <finalName>ROOT</finalName>

Removed the following since it is the default value

<project>
  <build>
    ...
    <plugins>
      <plugin>
        ...
        <configuration>
          <warSourceDirectory>src/main/webapp</warSourceDirectory>
        </configuration>

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     </dependencies>
 
     <build>
+        <finalName>ROOT</finalName>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
@@ -29,7 +30,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
                 <configuration>
-                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
                 </configuration>
             </plugin>
             <plugin>
