--- a/Dockerfile-EAP
+++ b/Dockerfile-EAP
@@ -8,10 +8,12 @@
 #FROM registry.redhat.io/jboss-eap-7/eap73-openjdk8-openshift-rhel7
 FROM registry.redhat.io/jboss-eap-7/eap74-openjdk11-openshift-rhel8:7.4.10-3
 
-COPY target/ROOT.war $JBOSS_HOME/standalone/deployments
+ARG WAR_FILE=ROOT.war
+
+COPY target/$WAR_FILE $JBOSS_HOME/standalone/deployments
 
 USER root
-RUN chown jboss:jboss $JBOSS_HOME/standalone/deployments/ROOT.war
+RUN chown jboss:jboss $JBOSS_HOME/standalone/deployments/$WAR_FILE
 USER jboss
 
 #EXPOSE 8080
