--- a/Dockerfile-EAP
+++ b/Dockerfile-EAP
@@ -5,8 +5,8 @@
 #
 # In the JBoss EAP container, JBoss EAP runs as the jboss user but copied files are brought in as root.
 #
-#FROM registry.redhat.io/jboss-eap-7/eap73-openjdk8-openshift-rhel7
-FROM registry.redhat.io/jboss-eap-7/eap74-openjdk11-openshift-rhel8:7.4.10-3
+#FROM registry.redhat.io/jboss-eap-7/eap74-openjdk11-openshift-rhel8:latest
+FROM registry.redhat.io/jboss-eap-7/eap74-openjdk8-openshift-rhel8:latest
 
 ARG WAR_FILE=ROOT.war
 
